@@ -1,0 +1,23 @@
+.TH "cowdancer\-ilistdump" 1 "2007 Aug 31" "cowdancer" "cowdancer"
+.SH "NAME"
+cowdancer\-ilistdump \- Dump contents of ilist file.
+.SH "SYNOPSIS"
+.BI "cowdancer-ilistdump " "ilist-path"
+.SH "DESCRIPTION"
+.B cowdancer\-ilistdump
+Dumps the contents of .ilist file used in cowdancer.
+
+.SH "EXAMPLES"
+.TP
+.B "cowdancer-ilistdump .ilist"
+dumps the content of .ilist file. Output is in the form of 'device
+number' 'inode number' for one file per line.
+
+.SH "AUTHOR"
+Junichi Uekawa (dancer@debian.org)
+
+Upstream page is available at 
+.B "http://www.netfort.gr.jp/~dancer/software/cowdancer.html"
+
+.SH "SEE ALSO"
+.BR "cow-shell (" 1 ")"
