@@ -3,7 +3,7 @@
 set -ex
 
 TESTDIR=$(mktemp -d )
-TESTCODE=$(readlink -f tests/014_ilistdump_test.c)
+TESTCODE=$(readlink -f cowdancer-ilistdump.c)
 
 (
     cd ${TESTDIR}
@@ -22,7 +22,7 @@ TESTCODE=$(readlink -f tests/014_ilistdump_test.c)
 )
 RET=$?
 
-$TESTCODE < ${TESTDIR}/1/.ilist | sort -k 2 -n > ${TESTDIR}/mylist.2
+"${TESTCODE}" ${TESTDIR}/1/.ilist | sort -k 2 -n > ${TESTDIR}/mylist.2
 
 diff -u ${TESTDIR}/mylist.1 ${TESTDIR}/mylist.2
 
